--- a/paper/references.bib
+++ b/paper/references.bib
@@ -5,3 +5,13 @@
   year={2016},
   pages={785--794}
 }
+
+@article{gil2022epilots,
+  author = {Gil, David and others},
+  title = {{E-Pilots: A System to Predict Hard Landing During the Approach Phase of Commercial Flights}},
+  journal = {IEEE Access},
+  volume = {10},
+  pages = {7489--7503},
+  year = {2022},
+  doi = {10.1109/ACCESS.2021.3138167}
+}
