add link in paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -135,6 +135,8 @@ Although early prediction of landing quality proved difficult, this work demonst
 
 Future work could explore additional features or sensor fusion techniques, such as integrating inertial or vision-based data. While real-time prediction remains a challenge, other aspects of flight behavior could be modeled and evaluated to provide further insights into pilot performance or aircraft handling.
 
+All of the code for this project is available at: https://github.com/nJohnson02/flight-data
+
 \bibliographystyle{IEEEtran}
 \bibliography{references}
 
