updated email in paper

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -23,7 +23,7 @@
 \author{\IEEEauthorblockN{Nathan Johnson}
 \IEEEauthorblockA{\textit{Embry-Riddle Aeronautical University} \\
 Prescott, Arizona, USA \\
-nathan.johnson@erau.edu}}
+johnsn63@my.erau.edu}}
 
 \begin{document}
 
